@@ -1,3 +1,14 @@
+Tue Jul  5 14:05:43 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/webrick/httpauth/digestauth.rb (_authenticate):
+	  Literal texts in HTTP ABNF is case-insensitive (RFC2616 2.1),
+	  and a ample implementation in RFC2617 also ignores the case
+	  of algorithms. So now this ignores those cases.
+	  [ruby-dev:43965] [Feature #4936]
+
+	* lib/webrick/httpauth/digestauth.rb (initialize):
+	  Because of above, opera_hack is useless and removed.
+
 Tue Jul  5 01:30:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* thread_pthread.c (native_sleep): cut the waiting time up to
